--- a/addons/fluentbit/fluentbit.yaml
+++ b/addons/fluentbit/fluentbit.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     kubeaddons.mesosphere.io/name: fluentbit
   annotations:
-    catalog.kubeaddons.mesosphere.io/addon-revision: "1.6.6-1"
+    catalog.kubeaddons.mesosphere.io/addon-revision: "1.6.6-2"
     appversion.kubeaddons.mesosphere.io/fluentbit: "1.6.6"
     values.chart.helm.kubeaddons.mesosphere.io/fluentbit: "https://raw.githubusercontent.com/fluent/helm-charts/35bb2a7/charts/fluent-bit/values.yaml"
     # the older versions were being deployed from stable/fluent-bit
@@ -27,6 +27,8 @@ spec:
     - name: azure
       enabled: true
     - name: gcp
+      enabled: true
+    - name: vsphere
       enabled: true
     - name: docker
       enabled: false
