--- a/addons/metallb/metallb.yaml
+++ b/addons/metallb/metallb.yaml
@@ -6,7 +6,7 @@ metadata:
     kubeaddons.mesosphere.io/name: metallb
     kubeaddons.mesosphere.io/provides: loadbalancer
   annotations:
-    catalog.kubeaddons.mesosphere.io/addon-revision: "0.9.3-4"
+    catalog.kubeaddons.mesosphere.io/addon-revision: "0.9.3-5"
     appversion.kubeaddons.mesosphere.io/metallb: "0.9.3"
     values.chart.helm.kubeaddons.mesosphere.io/metallb: "https://raw.githubusercontent.com/mesosphere/charts/1ce2aaa/stable/metallb/values.yaml"
 spec:
@@ -15,6 +15,15 @@ spec:
   cloudProvider:
     - name: azure
       enabled: false
+    - name: vsphere
+      enabled: false
+      values: |
+        configInline:
+          address-pools:
+          - name: default
+            protocol: layer2
+            # configure addresses if addon is enabled
+            addresses: []
     - name: docker
       enabled: true
       values: |
