--- a/addons/traefik-forward-auth/traefik-forward-auth.yaml
+++ b/addons/traefik-forward-auth/traefik-forward-auth.yaml
@@ -4,7 +4,7 @@ metadata:
   name: traefik-forward-auth
   namespace: kubeaddons
   annotations:
-    catalog.kubeaddons.mesosphere.io/addon-revision: "1.0.4-8"
+    catalog.kubeaddons.mesosphere.io/addon-revision: "1.0.4-9"
 spec:
   kubernetes:
     minSupportedVersion: v1.15.6
@@ -14,6 +14,8 @@ spec:
     - name: azure
       enabled: true
     - name: gcp
+      enabled: true
+    - name: vsphere
       enabled: true
     - name: docker
       enabled: true
